## ############################################################
##
## File:  Makefile.am
##
## Purpose:  Run automake in top directory to make Makefile.in
##           in all subdirectories
##
## $Id: Makefile.am 42 2010-01-11 22:35:53Z srinath $

## ############################################################

SUBDIRS	= bin math qfm src #tools

EXTRA_DIST = CHANGES

MAINTAINERCLEANFILES    = Makefile.in




