## ############################################################
##
## File:  Makefile.am
##
## Purpose:  Run automake in top directory to make Makefile.in
##           in all subdirectories
##
## $Id: Makefile.am 36 2010-01-11 21:04:36Z srinath $
## ############################################################

SUBDIRS= GEO gyro2gkv input iterdb_read fieldline spectra summary vtkgyro

EXTRA_DIST = \
	README.help

MAINTAINERCLEANFILES    = Makefile.in 

   
