## ############################################################
##
## File:  Makefile.am
##
## Purpose:  Run automake in top directory to make Makefile.in
##           in all subdirectories
##
## $Id: Makefile.am 38 2010-01-11 21:51:29Z srinath $

## ############################################################

MAINTAINERCLEANFILES    = Makefile.in 
dist_noinst_DATA= \
README.vugyro \
add_image.pro \
all_profiles_event.pro \
all_profiles_see.pro \
balloon_common.pro \
balloon_event.pro \
balloon_label_update.pro \
balloon_plot.pro \
balloon_see.pro \
bar_oplot.pro \
box_car_ave.pro \
collision_common.pro \
collision_event.pro \
collision_see.pro \
color_map.pro \
color_table_setup.pro \
colorbar.pro \
contour_options_event.pro \
contour_options_see.pro \
counter_dn.pro \
counter_loop.pro \
counter_up.pro \
default.pro \
device_reset.pro \
diff_stat_fast.pro \
diff_statistics.pro \
diffusion_ave_event.pro \
diffusion_ave_see.pro \
diffusion_bca_event.pro \
diffusion_bca_see.pro \
diffusion_i_ave_event.pro \
diffusion_i_ave_plot.pro \
diffusion_i_ave_see.pro \
diffusion_i_eff_event.pro \
diffusion_i_eff_plot.pro \
diffusion_i_eff_see.pro \
diffusion_i_rt_plot.pro \
diffusion_i_rt_see.pro \
dist_event.pro \
dist_k_event.pro \
dist_k_see.pro \
dist_plot.pro \
dist_see.pro \
each_diffusion_event.pro \
each_diffusion_see.pro \
each_np_event.pro \
each_np_see.pro \
entropy_balance_event.pro \
entropy_balance_see.pro \
envelope.pro \
error_not_available.pro \
exp_fit.pro \
exp_profiles_event.pro \
exp_profiles_see.pro \
extract_contour.pro \
extract_one_contour.pro \
field_r0_theta_event.pro \
field_r0_theta_see.pro \
field_r_event.pro \
field_r_plot.pro \
field_r_see.pro \
field_shear_event.pro \
field_shear_see.pro \
field_theta_event.pro \
field_theta_see.pro \
gbflux_event.pro \
gbflux_i_event.pro \
gbflux_i_plot.pro \
gbflux_i_see.pro \
gbflux_n_event.pro \
gbflux_n_see.pro \
gbflux_see.pro \
gbflux_tag.pro \
geometry_event.pro \
geometry_see.pro \
get_dir_list.pro \
get_harmonic.pro \
get_singsurf.pro \
get_singsurf_den.pro \
get_singsurf_vec.pro \
get_t_string.pro \
gyro_choices.pro \
harmonics_event.pro \
harmonics_see.pro \
helpme.pro \
initialize.pro \
linear_freq_event.pro \
linear_freq_see.pro \
linear_spec_event.pro \
linear_spec_see.pro \
list.txt \
loadsim.pro \
logo-vugyro.jpg \
make_fine_grid.pro \
map_exp_profiles.pro \
master_event.pro \
master_see.pro \
meanstddev.pro \
midplane_avgkspect_plot.pro \
midplane_avgkspect_see.pro \
midplane_common.pro \
midplane_corr_plot.pro \
midplane_corr_see.pro \
midplane_deriv_event.pro \
midplane_deriv_plot.pro \
midplane_deriv_see.pro \
midplane_each_power_event.pro \
midplane_each_power_see.pro \
midplane_fluc_event.pro \
midplane_fluc_plot.pro \
midplane_fluc_see.pro \
midplane_freq_event.pro \
midplane_freq_see.pro \
midplane_mapper.pro \
midplane_n_power_event.pro \
midplane_n_power_plot.pro \
midplane_n_power_see.pro \
midplane_power_event.pro \
midplane_power_plot.pro \
midplane_power_see.pro \
midplane_rms_flucamp_plot.pro \
midplane_rms_flucamp_see.pro \
midplane_xypower_event.pro \
midplane_xypower_see.pro \
midplane_zfspect_plot.pro \
midplane_zfspect_see.pro \
nonlinear_transfer_event.pro \
nonlinear_transfer_see.pro \
numtostring.pro \
osc_event.pro \
osc_h_event.pro \
osc_h_see.pro \
osc_plot.pro \
osc_see.pro \
pdf_statistics.pro \
plot_bnd.pro \
plot_def_new.pro \
plot_finish.pro \
plot_variables_common.pro \
poloidal_common.pro \
poloidal_event.pro \
poloidal_see.pro \
print_found.pro \
profile_sim_common.pro \
ps_options_event.pro \
ps_options_see.pro \
read_array.pro \
read_ballooning_mode.pro \
read_collision.pro \
read_h.pro \
read_profile_vugyro.pro \
read_time_vector.pro \
read_units.pro \
safe_read.pro \
scalar_deriv.pro \
sdom.pro \
set_contour_levels.pro \
set_line_colors.pro \
smf_tag.pro \
source_event.pro \
source_see.pro \
source_t_event.pro \
source_t_see.pro \
spectrum_n_ave_event.pro \
spectrum_n_ave_see.pro \
spectrum_n_event.pro \
spectrum_n_see.pro \
spectrum_np_ave_event.pro \
spectrum_np_ave_plot.pro \
spectrum_np_ave_see.pro \
spectrum_np_event.pro \
spectrum_np_plot.pro \
spectrum_np_see.pro \
t_error_common.pro \
t_error_event.pro \
t_error_see.pro \
t_indices.pro \
tag_common.pro \
tag_gen.pro \
time_phi_labels.pro \
time_trace_event.pro \
time_trace_plot.pro \
time_trace_see.pro \
torus_contour.pro \
torus_contour_movie.pro \
transport_ne_te_ti_flows_event.pro \
transport_ne_te_ti_flows_see.pro \
transport_ne_te_ti_flows_vs_grads_event.pro \
transport_ne_te_ti_flows_vs_grads_see.pro \
transport_ne_te_ti_gradients_event.pro \
transport_ne_te_ti_gradients_see.pro \
transport_ne_te_ti_profiles_event.pro \
transport_ne_te_ti_profiles_see.pro \
user_control.pro \
vector_deriv.pro \
velocity_event.pro \
velocity_see.pro \
version_test.pro \
view_efficiency.pro \
view_run.pro \
vugyro.pro \
xdisplayfile.pro \
y_axis_magic.pro \
zerobar_event.pro \
zerobar_see.pro \
zmoment_common.pro \
zmoment_event.pro \
zmoment_see.pro
	

all-local:
	for i in $(dist_noinst_DATA) ; \
	do \
		cd $(top_builddir)/gyro/vugyro/ && if test ! -f $${i}; then ln -s $(top_srcdir)/gyro/vugyro/$${i} $${i} ;fi; \
	done


CLEANFILES = HELP* *gyro* *test*



   
